Add dotenv support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 colored = "2.0"
 urlencoding = "2.1"
+dotenv = "0.15.0"
